application/usermanagement-k8s/userApi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userapi-ingress
  annotations:
    # On spécifie qu'on utilise le contrôleur Nginx de Minikube
    kubernetes.io/spec.ingressClassName: "nginx"
spec:
  rules:
  - host: userapi.rns.tn  # C'est l'URL personnalisée qu'on va utiliser
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # pointe vers le nom EXACT de ton service Helm actuel
            name: userapi-release-userapi-chart 
            port:
              number: 3000 # Le port interne de ton API
